added github links to works

--- a/page-components/work.html
+++ b/page-components/work.html
@@ -14,7 +14,7 @@
 					<h2 class="work-head">Another portfolio i made</h2>
 					<p class="work-tech">HTML, SCSS, JavaScript</p>
 					<a class="work-link" href="https://kzha.nl/blog/" target="_blank">View project</a>
-					<a href="" target="_blank"><i class="fa-brands fa-square-github"></i></a>
+					<a href="https://github.com/kzha05/98-portfolio.git" target="_blank"><i class="fa-brands fa-square-github"></i></a>
 				</figcaption>
 				<div class="desc-text">
 					<p>This is another portfolio i made where the design was based of windows 98</p>
@@ -30,8 +30,6 @@
 					<h2 class="work-head">Show your text in different fonts</h2>
 					<p class="work-tech">HTML, SCSS, JavaScript</p>
 					<a class="work-link" href="https://34486.hosts1.ma-cloud.nl/font-showcase/" target="_blank">View project</a>
-					<a href="" target="_blank"><i class="fa-brands fa-square-github"></i></a>
-
 				</figcaption>
 				<div class="desc-text">
 					<p>One of the fist websites i made with SCSS, this was a school project</p>
@@ -46,8 +44,7 @@
 					<h2 class="work-head">A website about the kpop group NEWJEANS</h2>
 					<p class="work-tech">HTML, CSS</p>
 					<a class="work-link" href="https://kzha.nl/newjeans-blog/" target="_blank">View project</a>
-					<a href="" target="_blank"><i class="fa-brands fa-square-github"></i></a>
-
+					<a href="https://github.com/kzha05/newjeans-blog.git" target="_blank"><i class="fa-brands fa-square-github"></i></a>
 				</figcaption>
 				<div class="desc-text">
 					<p>One of the first websites i ever made</p>
@@ -62,8 +59,6 @@
 					<h2 class="work-head">A simple calendar</h2>
 					<p class="work-tech">HTML, SASS, JavaScript</p>
 					<a class="work-link" href="https://34486.hosts1.ma-cloud.nl/calender/" target="_blank">View project</a>
-					<a href="" target="_blank"><i class="fa-brands fa-square-github"></i></a>
-
 				</figcaption>
 				<div class="desc-text">
 					<p>A small project to try out some new JavaScript things i've learned</p>
@@ -78,7 +73,6 @@
 					<h2 class="work-head">A small blog about the singer Mitski</h2>
 					<p class="work-tech">HTML, SASS, JavaScript</p>
 					<a class="work-link" href="https://kzha.nl/mitski/" target="_blank">View project</a>
-					<a href="" target="_blank"><i class="fa-brands fa-square-github"></i></a>
 
 				</figcaption>
 				<div class="desc-text">
@@ -94,7 +88,6 @@
 					<h2 class="work-head">A moving banner made for the company LVenergy</h2>
 					<p class="work-tech">HTML, SCSS, JavaScript</p>
 					<a class="work-link" href="https://kzha.nl/banner/" target="_blank">View project</a>
-					<a href="" target="_blank"><i class="fa-brands fa-square-github"></i></a>
 
 				</figcaption>
 				<div class="desc-text">
@@ -110,11 +103,11 @@
 					<h2 class="work-head">Amsterdam museum project website</h2>
 					<p class="work-tech">HTML, SCSS, JavaScript</p>
 					<a class="work-link" href="https://kzha.nl/bever-website/" target="_blank">View project</a>
-					<a href="" target="_blank"><i class="fa-brands fa-square-github"></i></a>
+					<a href="https://github.com/kzha05/bever-opdracht.git" target="_blank"><i class="fa-brands fa-square-github"></i></a>
 
 				</figcaption>
 				<div class="desc-text">
-					<p>project description</p>
+					<p>A group project website made for the Amsterdam museum. I focused mostly on the design and functionality of the website</p>
 				</div>
 			</figure>
 
